[package]
name = "m10-bank-emulator"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "integration-tests"]
default-members = ["."]

[dependencies]
actix-web = "4.1"
actix-multipart = "0.6.1"
async-trait = "0.1"
base64 = "0.13"
biscuit = "0.7"
chrono = { version = "0.4.31", features = ["serde"] }
oneline-eyre = "0.1"
config = { version = "0.15.11", default-features = false, features = ["toml"] }
enumflags2 = "0.7"
eyre = "0.6"
flume = "0.11"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
hyper = { version = "^1.4", default-features = false, features = ["server", "http2"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
prost = "0.13.1"
prost-types = "0.13.1"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "multipart",
] }
rust_decimal = "1.14"
sqlx = { version = "=0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "1"
smol_str = "0.1"
tracing-actix-web = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "smallvec",
    "ansi",
    "parking_lot",
] }
tracing-error = "0.2"
tokio = { version = "1.25", default-features = false, features = ["full"] }
tonic = { version = "0.12.1", features = ["tls", "tls-roots"] }
parse-size = "=1.0.0"

m10-bank-emulator-protos = { path = "../../shared/rust/bank-emulator-protos", features = [
    "client",
] }
m10-rds-pool = { path = "../rds-pool" }
m10-sdk = "0.35.6"
pala-types = { path = "../../shared/rust/pala-types" }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "serde"]
