[package]
name = "m10"
version = "0.2.0"
authors = ["Michael Wittner <michael.wittner@m10.io>"]
edition = "2021"

[dependencies]
anyhow = "=1.0.61"
base64 = "0.13"
bytes = "1"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
config = { version = "0.11", default-features = false, features = ["yaml", "json", "toml"] }
dirs = "3"
futures-lite = "1.11"
hex = "0.4"
hyper = "0.14"
hyper-rustls = "0.22"
m10-sdk = "0.29.11"
m10-protos = { version = "0.29.11", features = ["dynamic2"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.6.4", features = ["hex"] }
serde_yaml = "0.8"
csv = "1.2"
thiserror = "1"
tokio = { version = "1.25", features = ["full"] }
tonic = { version = "0.5", features = ["tls", "tls-roots"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
