[package]
name = "m10"
version = "0.2.0"
authors = ["Michael Wittner <michael.wittner@m10.io>"]
edition = "2021"

[dependencies]
anyhow = "=1.0.61"
base64 = "0.13"
bytes = "1"
chrono = "0.4.31"
clap = { version = "4.3.10",  features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml", "json", "toml"] }
dirs = "3"
futures-lite = "1.11"
hex = "0.4"
hyper = "0.14.28"
hyper-rustls = "0.22"
libxid = { path = "../crates/libxid" }
m10-sdk = "0.34.0"
m10-protos = { version = "0.34.0", features = ["dynamic2"] }
ring = { version = "0.16", features = ["std"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.6.4", features = ["hex"] }
serde_yaml = "0.8"
csv = "1.2"
thiserror = "1"
tokio = { version = "1.25", features = ["full"] }
tonic = { version = "0.5", features = ["tls", "tls-roots"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }

