[package]
name = "m10-rds-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
bb8 = "0.7.1"
percent-encoding = "2"
sqlx-core = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
url = "2"
reqwest = { version = "0.11.11", features = ["stream"] }
http = "1.0.0"
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sigv4 = "1.1.3"
aws-credential-types = "1.1.3"
