[package]
name = "m10-rds-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
bb8 = "0.8.0"
percent-encoding = "2"
sqlx = { version = "=0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
url = "=2.5.4"
reqwest = { version = "0.12.5", features = ["stream"] }
http = "1.0.0"
aws-config = { version = "=1.5.10", features = ["behavior-version-latest"] }
aws-sigv4 = "1.1.3"
aws-credential-types = "1.1.3"

aws-sdk-sso = "=1.50.0"
aws-sdk-ssooidc = "=1.51.0"
aws-sdk-sts = "=1.51.0"
home = "=0.5.5"
