[package]
name = "m10-protos"
version = "0.35.6"
authors = ["Sascha Wise <sascha@m10.io>", "Sam De Roeck <sam.deroeck@m10.io>"]
edition = "2021"
description = "M10 Protocol Buffers"
license = "MIT"
homepage = "https://docs-app.m10.net"
repository = "https://github.com/m10io/sdk"

[features]
default = []
client = ["grpc"]
server = ["grpc"]
dynamic2 = ["looking-glass", "looking-glass-derive"]
grpc = ["tonic"]


[dependencies]
bytes = { version = "1", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_with = "1"
prost = "0.13.1"
prost-types = "0.13.1"
once_cell = "1"
hex = "0.4"
ring = { version = "0.17.13", features = ["std"] }
tonic = { version = "0.12.1", optional = true }

# `dynamic-derive` feature.
looking-glass = { version = "0.1.1", optional = true }
looking-glass-derive = { version = "0.1.1", optional = true }

[build-dependencies]
prost-build = "0.13.1"
tonic-build = "0.12.1"
