[package]
name = "m10-sdk"
version = "0.29.7"
authors = ["Michael Wittner <michael.wittner@m10.io>", "Sam De Roeck <sam.deroeck@m10.io>"]
edition = "2021"
description = "M10 SDK API"
license = "MIT"
homepage = "https://docs-app.m10.net"
repository = "https://github.com/m10io/sdk"
readme = "README.md"


[features]
default = ["format", "client", "collections", "service", "image", "contract", "account"]
collections = []
service = ["tonic", "m10-signing", "futures-core", "futures-util", "m10-protos/client"]
image = ["reqwest"]
account = []
contract = ["ring", "thiserror"]
client = ["service"]
format = ["parse-display", "base64", "hex/default", "serde_json", "serde_yaml", "ron"]

[dependencies]
bytes = "1"
fastrand = "1"
hex = { version = "0.4", default-features = false }
m10-protos = { version = "0.29", path = "../protos" }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1", features = ["hex"] }

# image
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"], optional = true }

# contract
thiserror = { version = "1", optional = true }
ring = { version = "0.16", features = ["std"], optional = true }

# service
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
m10-signing = { version = "0.29.7", path = "../signing", optional = true }
tonic = { version = "0.5", features = ["tls", "tls-roots"], optional = true }

# format
parse-display = { version = "0.5", optional = true }
base64 = { version = "0.13", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
ron = { version = "0.8", optional = true }

[dev-dependencies]
clap = "3.0.0-beta.1"
tokio = { version = "1", features = ["rt", "macros"] }
