[package]
name = "m10-signing"
version = "0.4.0"
authors = ["Michael Wittner <michael.wittner@m10.io>"]
edition = "2021"
description = "M10 utility library for request signing"
license = "MIT"
homepage = "https://m10.net/docs"
repository = "https://github.com/m10io/sdk"

[dependencies]
async-trait = "0.1"
anyhow = "1"
base64 = "0.13"
m10-sdk-protos = { version = "0.4.0", path = "../sdk-protos" }
serde = { version = "1", default-features = false, features = ["alloc", "derive", "rc"] }
ring = { version = "0.16", features = ["std"] }
thiserror = "1"
