[package]
name = "m10-signing"
version = "0.24.3"
authors = ["Michael Wittner <michael.wittner@m10.io>"]
edition = "2021"
description = "M10 utility library for request signing"
license = "MIT"
homepage = "https://docs-app.m10.net"
repository = "https://github.com/m10io/sdk"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
m10-protos = { version = "0.24.3", path = "../protos" }
serde = { version = "1", default-features = false, features = ["alloc", "derive", "rc"] }
ring = { version = "0.16", features = ["std"] }
thiserror = "1"
