[package]
name = "m10-signing"
version = "0.35.7"
authors = ["Michael Wittner <michael.wittner@m10.io>"]
edition = "2021"
description = "M10 utility library for request signing"
license = "MIT"
homepage = "https://docs-app.m10.net"
repository = "https://github.com/m10io/sdk"

[features]
verbose_errors = ["log"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
m10-protos = { version = "0.35", path = "../protos" }
serde = { version = "1", default-features = false, features = ["alloc", "derive", "rc"] }
ring = { version = "0.17", features = ["std"] }
thiserror = "1"
vaultrs = "0.7.4"
url = "=2.5.4"

log = { version = "0.4", optional = true }
