[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
base64 = "0.13"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
ring = "0.16"
rust_decimal = "1.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.5"
tokio = { version = "1.7.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde"] }
m10-bank-emulator = { path = ".." }
m10-sdk = "0.20.3"
