[package]
name = "app"
version = "0.1.0"
description = "M10 Operator/CBDC Demo App"
authors = ["Michael Wittner <michael.wittner@m10.io>"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }


[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
config = { version = "0.11", default-features = false, features = ["toml"] }
hex = "0.4"
m10-sdk = "0.20.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1"
tauri = { version = "1.0.0-rc.6", features = ["api-all"] }
tokio = { version = "1.6.1", features = ["full"] }
uuid = { version = "0.8", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
